--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -283,6 +283,8 @@
 
   .carousel-image-wrapper {
     width: 100%;
+    padding-right: 0;
+    box-sizing: border-box;
   }
 
   .carousel-arrow {
